crates/pamoja-ffi/include/pamoja.h

// The result of a fallible pamoja call.
//
// A return of [`PamojaStatus::Ok`] means success; any other value indicates a
// failure whose description is available from [`pamoja_last_error_message`] on
// the same thread.
typedef enum {
  // The call succeeded.
  PamojaStatus_Ok = 0,
  // A transport-level failure while connecting, sending, or receiving.
  PamojaStatus_Transport = 1,
  // A device or peripheral input/output operation failed.
  PamojaStatus_Io = 2,
  // A payload could not be encoded or decoded.
  PamojaStatus_Codec = 3,
  // The operation targeted a resource that is closed or disconnected.
  PamojaStatus_Closed = 4,
  // The requested capability is not compiled into this build.
  PamojaStatus_Unsupported = 5,
  // An argument was null or otherwise invalid, for example non-UTF-8 text.
  PamojaStatus_InvalidArgument = 6,
  // A failure that does not map onto a more specific status.
  PamojaStatus_Other = 7,
  // A Rust panic was caught at the boundary; the call had no effect.
  PamojaStatus_Panic = 8,
  // A security check failed, such as an invalid identity or a bad signature.
  PamojaStatus_Auth = 9,
} PamojaStatus;
// A regional channel plan, published or private.
//
// The handle always owns its tables, so a published region and one assembled
// here are the same type and answer the same queries. A published plan also keeps
// the plans a join selects between, which point at other published plans and so
// cannot be owned.
//
// A handle the caller must release with [`pamoja_lora_plan_free`].
typedef struct PamojaLoraPlan PamojaLoraPlan;
// A channel plan under construction.
//
// A handle the caller must release with [`pamoja_lora_plan_builder_free`], or
// hand to [`pamoja_lora_plan_builder_build`], which consumes it.
typedef struct PamojaLoraPlanBuilder PamojaLoraPlanBuilder;
// What one `ChMaskCntl` value of a `LinkADRReq` does.
typedef struct {
  // One of the `PAMOJA_LORA_MASK_*` constants.
  uint8_t kind;
  // For [`PAMOJA_LORA_MASK_GROUP`], the group the mask sets.
  uint8_t group;
  // For [`PAMOJA_LORA_MASK_ALL`], `1` to turn every channel on and `0` to turn it off.
  uint8_t on;
  // For [`PAMOJA_LORA_MASK_ALL`], `1` if the mask then sets `then_group`.
  uint8_t has_then_group;
  // The group the mask then sets.
  uint8_t then_group;
} PamojaLoraMaskControl;
// A run of evenly spaced channels.
typedef struct {
  // The first channel's center frequency in hertz.
  uint32_t start_hz;
  // The spacing between channels in hertz.
  uint32_t step_hz;
  // How many channels the block holds.
  uint16_t count;
  // The slowest data rate the block allows.
  uint8_t min_data_rate;
  // The fastest data rate the block allows.
  uint8_t max_data_rate;
} PamojaLoraChannelBlock;
// The Class B beacon settings of a plan.
typedef struct {
  // The frequency the beacon is broadcast on, in hertz.
  uint32_t frequency_hz;
  // The default ping-slot frequency, in hertz.
  uint32_t ping_slot_frequency_hz;
  // The data rate the beacon is broadcast at.
  uint8_t data_rate;
} PamojaLoraBeacon;
// One data rate: how a number on the wire maps onto radio settings.
//
// `kind` selects which fields carry meaning. A LoRa rate uses
// `spreading_factor` and `bandwidth_hz`; an LR-FHSS rate uses the coding-rate
// pair and `bandwidth_hz`; an FSK rate uses `bitrate_bps` alone. A reserved
// number leaves every field zero.
typedef struct {
  // The payload bitrate in bits per second.
  uint32_t bitrate_bps;
  // The channel bandwidth in hertz, or zero for FSK.
  uint32_t bandwidth_hz;
  // One of the `PAMOJA_LORA_MODULATION_*` constants.
  uint8_t kind;
  // The spreading factor, for a LoRa rate.
  uint8_t spreading_factor;
  // The coding-rate numerator, for an LR-FHSS rate.
  uint8_t coding_rate_numerator;
  // The coding-rate denominator, for an LR-FHSS rate.
  uint8_t coding_rate_denominator;
} PamojaLoraDataRate;
// A slice of a band with its own transmit limits.
typedef struct {
  // The first frequency in the sub-band, in hertz.
  uint32_t start_hz;
  // The last frequency in the sub-band, in hertz.
  uint32_t end_hz;
  // The share of time a transmitter may hold the channel, in parts per
  // thousand, so `10` is one percent and `1000` is unrestricted.
  uint32_t duty_cycle_permille;
  // The power ceiling in dBm EIRP.
  int8_t max_eirp_dbm;
} PamojaLoraSubBand;
// Releases a plan builder that will not be built.
//
// # Arguments
//
// * `builder` - the handle to release; null is ignored.
//
// # Safety
//
// `builder` must have come from [`pamoja_lora_plan_builder_new`], must not have
// been passed to [`pamoja_lora_plan_builder_build`], and must not be used
// afterwards.
void pamoja_lora_plan_builder_free(PamojaLoraPlanBuilder *builder);
// Appends a data rate to the end of a direction's table.
//
// Data rates are numbered by their position, so push them in order and use a
// [`PAMOJA_LORA_MODULATION_RESERVED`] entry for a number the plan does not use.
// A plan that leaves its downlink table empty reuses its uplink table, which is
// what most regions do.
//
// # Arguments
//
// * `builder` - the builder to extend.
// * `direction` - [`PAMOJA_LORA_DIRECTION_UPLINK`] or
//   [`PAMOJA_LORA_DIRECTION_DOWNLINK`].
// * `rate` - the data rate to append.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if either pointer is null, the
// direction is not one of the constants, or the modulation kind is not one this
// ABI defines, and [`PamojaStatus::Closed`] if the builder was already built.
//
// # Safety
//
// `builder` must be a live builder handle and `rate` must point at one readable
// [`PamojaLoraDataRate`].
PamojaStatus pamoja_lora_plan_builder_push_data_rate(PamojaLoraPlanBuilder *builder,
                                                     uint32_t direction,
                                                     const PamojaLoraDataRate *rate);
// Appends a payload limit to the end of one of the plan's tables.
//
// Limits are numbered by their position, matching the data rates. A plan that
// leaves a downlink table empty reuses the matching uplink one.
//
// # Arguments
//
// * `builder` - the builder to extend.
// * `table` - one of the `PAMOJA_LORA_PAYLOAD_TABLE_*` constants.
// * `present` - `0` to append a reserved entry, for a data rate the plan does
//   not define; the two lengths are then ignored.
// * `mac_payload` - the largest MAC payload in bytes.
// * `application` - the largest application payload in bytes.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if `builder` is null or `table` is
// not one of the constants, and [`PamojaStatus::Closed`] if the builder was
// already built.
//
// # Safety
//
// `builder` must be a live builder handle.
PamojaStatus pamoja_lora_plan_builder_push_max_payload(PamojaLoraPlanBuilder *builder,
                                                       uint32_t table,
                                                       uint8_t present,
                                                       uint16_t mac_payload,
                                                       uint16_t application);
// Appends a run of evenly spaced channels to the plan.
//
// # Arguments
//
// * `builder` - the builder to extend.
// * `which` - [`PAMOJA_LORA_CHANNELS_JOIN`], [`PAMOJA_LORA_CHANNELS_DEFAULT`] or
//   [`PAMOJA_LORA_CHANNELS_DOWNLINK`].
// * `block` - the channel block to append.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if either pointer is null or `which`
// is not one of the constants, and [`PamojaStatus::Closed`] if the builder was
// already built.
//
// # Safety
//
// `builder` must be a live builder handle and `block` must point at one readable
// [`PamojaLoraChannelBlock`].
PamojaStatus pamoja_lora_plan_builder_push_channel_block(PamojaLoraPlanBuilder *builder,
                                                         uint32_t which,
                                                         const PamojaLoraChannelBlock *block);
// Appends a sub-band and its transmit limits to the plan.
//
// A deployment on licensed spectrum gives its sub-band a duty cycle of `1000`,
// which reports as unrestricted.
//
// # Arguments
//
// * `builder` - the builder to extend.
// * `band` - the sub-band to append.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if either pointer is null, and
// [`PamojaStatus::Closed`] if the builder was already built.
//
// # Safety
//
// `builder` must be a live builder handle and `band` must point at one readable
// [`PamojaLoraSubBand`].
PamojaStatus pamoja_lora_plan_builder_push_sub_band(PamojaLoraPlanBuilder *builder,
                                                    const PamojaLoraSubBand *band);
// Appends one uplink data rate's row of RX1 downlink data rates.
//
// Rows are numbered by their position, matching the uplink data rates, and every
// row must be as wide as the plan's highest RX1 offset allows.
//
// # Arguments
//
// * `builder` - the builder to extend.
// * `dwell_limited` - `1` to append to the mapping used under a dwell-time
//   limit, `0` for the ordinary one.
// * `offsets` - the downlink data rate for each offset, in order.
// * `offsets_len` - how many offsets `offsets` holds.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if `builder` or `offsets` is null,
// and [`PamojaStatus::Closed`] if the builder was already built.
//
// # Safety
//
// `builder` must be a live builder handle and `offsets` must point at
// `offsets_len` readable bytes.
PamojaStatus pamoja_lora_plan_builder_push_rx1_row(PamojaLoraPlanBuilder *builder,
                                                   uint8_t dwell_limited,
                                                   const uint8_t *offsets,
                                                   uintptr_t offsets_len);
// Appends the next entry in the adaptive back-off chain.
//
// Entries are numbered by their position, matching the uplink data rates.
//
// # Arguments
//
// * `builder` - the builder to extend.
// * `has_lower` - `0` if this data rate is the slowest, with nothing below it;
//   `data_rate` is then ignored.
// * `data_rate` - the data rate to fall back to.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if `builder` is null, and
// [`PamojaStatus::Closed`] if the builder was already built.
//
// # Safety
//
// `builder` must be a live builder handle.
PamojaStatus pamoja_lora_plan_builder_push_backoff(PamojaLoraPlanBuilder *builder,
                                                   uint8_t has_lower,
                                                   uint8_t data_rate);
// Sets the plan's transmit-power ladder.
//
// # Arguments
//
// * `builder` - the builder to set.
// * `default_max_eirp_dbm` - the ceiling assumed where no sub-band says
//   otherwise.
// * `tx_power_step_db` - the step between transmit-power settings, in dB.
// * `max_tx_power_index` - the highest transmit-power index the plan defines.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if `builder` is null, and
// [`PamojaStatus::Closed`] if the builder was already built.
//
// # Safety
//
// `builder` must be a live builder handle.
PamojaStatus pamoja_lora_plan_builder_set_power(PamojaLoraPlanBuilder *builder,
                                                int8_t default_max_eirp_dbm,
                                                uint8_t tx_power_step_db,
                                                uint8_t max_tx_power_index);
// Sets the plan's receive windows.
//
// # Arguments
//
// * `builder` - the builder to set.
// * `rx2_frequency_hz` - the fixed frequency the second window listens on.
// * `rx2_data_rate` - the data rate the second window listens at.
// * `max_rx1_data_rate_offset` - the highest RX1 offset the plan allows, which
//   fixes how wide every RX1 row must be.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if `builder` is null, and
// [`PamojaStatus::Closed`] if the builder was already built.
//
// # Safety
//
// `builder` must be a live builder handle.
PamojaStatus pamoja_lora_plan_builder_set_rx(PamojaLoraPlanBuilder *builder,
                                             uint32_t rx2_frequency_hz,
                                             uint8_t rx2_data_rate,
                                             uint8_t max_rx1_data_rate_offset);
// Sets the plan's Class B beacon and whether it limits dwell time.
//
// # Arguments
//
// * `builder` - the builder to set.
// * `beacon` - the beacon settings.
// * `has_dwell_time_limit` - `1` if the plan caps how long one transmission may
//   hold a channel.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if either pointer is null, and
// [`PamojaStatus::Closed`] if the builder was already built.
//
// # Safety
//
// `builder` must be a live builder handle and `beacon` must point at one
// readable [`PamojaLoraBeacon`].
PamojaStatus pamoja_lora_plan_builder_set_beacon(PamojaLoraPlanBuilder *builder,
                                                 const PamojaLoraBeacon *beacon,
                                                 uint8_t has_dwell_time_limit);
// Sets whether the plan's network creates channels, and the numbering a dynamic plan reads
// a type 1 channel list against.
//
// # Arguments
//
// * `builder` - the builder to update.
// * `kind` - [`PAMOJA_LORA_PLAN_KIND_DYNAMIC`] or [`PAMOJA_LORA_PLAN_KIND_FIXED`].
// * `channel_list` - for a dynamic plan, one of the `PAMOJA_LORA_CHANNEL_LIST_*` constants;
//   ignored for a fixed one.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if `builder` is null or a code names nothing,
// and [`PamojaStatus::Closed`] if the builder was already built.
//
// # Safety
//
// `builder` must be a live builder handle.
PamojaStatus pamoja_lora_plan_builder_set_kind(PamojaLoraPlanBuilder *builder,
                                               uint8_t kind,
                                               uint8_t channel_list);
// Sets whether devices on the plan answer `TXParamSetupReq`.
//
// # Arguments
//
// * `builder` - the builder to update.
// * `answered` - `1` if the command applies.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if `builder` is null, and
// [`PamojaStatus::Closed`] if the builder was already built.
//
// # Safety
//
// `builder` must be a live builder handle.
PamojaStatus pamoja_lora_plan_builder_set_tx_param_setup(PamojaLoraPlanBuilder *builder,
                                                         uint8_t answered);
// Sets what each `ChMaskCntl` value does.
//
// # Arguments
//
// * `builder` - the builder to update.
// * `controls` - the eight controls, indexed by value.
// * `len` - how many `controls` points at, which must be 8.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if a pointer is null, `len` is not 8, or a
// control's kind names nothing, and [`PamojaStatus::Closed`] if the builder was already
// built.
//
// # Safety
//
// `builder` must be a live builder handle and `controls` must point at `len` readable
// [`PamojaLoraMaskControl`] values.
PamojaStatus pamoja_lora_plan_builder_set_mask_controls(PamojaLoraPlanBuilder *builder,
                                                        const PamojaLoraMaskControl *controls,
                                                        uintptr_t len);
// Sets the order a device tries the join channels in.
//
// # Arguments
//
// * `builder` - the builder to update.
// * `sequence` - one of the `PAMOJA_LORA_JOIN_*` constants.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if `builder` is null or `sequence` names
// nothing, and [`PamojaStatus::Closed`] if the builder was already built.
//
// # Safety
//
// `builder` must be a live builder handle.
PamojaStatus pamoja_lora_plan_builder_set_join_sequence(PamojaLoraPlanBuilder *builder,
                                                        uint8_t sequence);
// Sets what the plan's transmit power indexes count down from.
//
// # Arguments
//
// * `builder` - the builder to update.
// * `reference` - [`PAMOJA_LORA_POWER_EIRP`] or [`PAMOJA_LORA_POWER_CONDUCTED`].
// * `gain_allowance_db` - for a conducted ceiling, the antenna gain it allows for.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if `builder` is null or `reference` names
// nothing, and [`PamojaStatus::Closed`] if the builder was already built.
//
// # Safety
//
// `builder` must be a live builder handle.
PamojaStatus pamoja_lora_plan_builder_set_power_reference(PamojaLoraPlanBuilder *builder,
                                                          uint8_t reference,
                                                          uint8_t gain_allowance_db);
// Finishes a plan and hands back a handle the query functions accept.
//
// The builder is consumed whether the plan is accepted or rejected, so the
// caller must not free or reuse it afterwards.
//
// Tables left empty are filled in where a region would share them: an empty
// downlink data-rate table reuses the uplink one, an empty downlink payload
// table reuses the matching uplink one, and an empty back-off chain steps down
// one data rate at a time. What cannot be guessed is checked instead, so a plan
// that would answer a question wrongly is refused here rather than at the
// question.
//
// # Arguments
//
// * `builder` - the builder to finish, which this call consumes.
// * `out_plan` - set to the plan handle on success, and to null otherwise.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if either pointer is null or the
// plan is inconsistent, with the reason available from
// `pamoja_last_error_message`, and
// [`PamojaStatus::Closed`] if the builder was already built.
//
// # Safety
//
// `builder` must be a live builder handle from
// [`pamoja_lora_plan_builder_new`], and `out_plan` must point at writable
// storage for one pointer.
PamojaStatus pamoja_lora_plan_builder_build(PamojaLoraPlanBuilder *builder,
                                            PamojaLoraPlan **out_plan);