bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.LoraRegion.cs


    /// <summary>Releases a plan builder that will not be built.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_lora_plan_builder_free(IntPtr builder);

    /// <summary>Appends a data rate to the end of a direction's table.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_push_data_rate(
        IntPtr builder,
        uint direction,
        in PamojaLoraDataRate rate);

    /// <summary>Appends a payload limit to the end of one of the plan's tables.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_push_max_payload(
        IntPtr builder,
        uint table,
        byte present,
        ushort macPayload,
        ushort application);

    /// <summary>Appends a run of evenly spaced channels to the plan.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_push_channel_block(
        IntPtr builder,
        uint which,
        in PamojaLoraChannelBlock block);

    /// <summary>Appends a sub-band and its transmit limits to the plan.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_push_sub_band(
        IntPtr builder,
        in PamojaLoraSubBand band);

    /// <summary>Appends one uplink data rate's row of RX1 downlink data rates.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_push_rx1_row(
        IntPtr builder,
        byte dwellLimited,
        ReadOnlySpan<byte> offsets,
        nuint offsetsLen);

    /// <summary>Appends the next entry in the adaptive back-off chain.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_push_backoff(
        IntPtr builder,
        byte hasLower,
        byte dataRate);

    /// <summary>Sets the plan's transmit-power ladder.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_set_power(
        IntPtr builder,
        sbyte defaultMaxEirpDbm,
        byte txPowerStepDb,
        byte maxTxPowerIndex);

    /// <summary>Sets the plan's receive windows.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_set_rx(
        IntPtr builder,
        uint rx2FrequencyHz,
        byte rx2DataRate,
        byte maxRx1DataRateOffset);

    /// <summary>Sets the plan's Class B beacon and whether it limits dwell time.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_set_beacon(
        IntPtr builder,
        in PamojaLoraBeacon beacon,
        byte hasDwellTimeLimit);

    /// <summary>Sets whether the plan's network creates channels, and its channel list numbering.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_set_kind(
        IntPtr builder,
        byte kind,
        byte channelList);

    /// <summary>Sets whether devices on the plan answer <c>TXParamSetupReq</c>.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_set_tx_param_setup(
        IntPtr builder,
        byte answered);

    /// <summary>Sets what each <c>ChMaskCntl</c> value does.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_set_mask_controls(
        IntPtr builder,
        ReadOnlySpan<PamojaLoraMaskControl> controls,
        nuint len);

    /// <summary>Sets the order a device tries the join channels in.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_set_join_sequence(
        IntPtr builder,
        byte sequence);

    /// <summary>Sets what the plan's transmit power indexes count down from.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_set_power_reference(
        IntPtr builder,
        byte reference,
        byte gainAllowanceDb);

    /// <summary>Finishes a plan, consuming the builder.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lora_plan_builder_build(
        IntPtr builder,
        out IntPtr outPlan);
}
